# glitterbomb

./: Cargo.toml  README.md  SEMMAP.md  index.html  lib.rs  slopchop-report.txt
.slopchop/: events.jsonl
examples/: desktop_test.rs
src/: animation.rs  desktop.rs  lib.rs  particle.rs  renderer.rs  shader.wgsl  types.rs  web.rs
src/desktop/: gpu.rs  mod.rs  particle.rs  shader.wgsl
src/particle/: mod.rs  wasm.rs
src/web/: mod.rs  state.rs
tests/: wasm.rs
