[package]
name = "glitterbomb"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "A pure Rust confetti animation library. Web and desktop support."
repository = "https://github.com/junovhs/glitterbomb"
keywords = ["confetti", "wasm", "canvas", "animation", "dioxus"]
categories = ["wasm", "web-programming", "graphics"]
readme = "README.md"

[features]
default = ["web"]
web = ["web-sys", "wasm-bindgen", "js-sys", "wasm-bindgen-futures"]
desktop = ["minifb", "tiny-skia"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomRect",
    "MediaQueryList",
] }

minifb = { version = "0.27", optional = true }
tiny-skia = { version = "0.11", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "desktop_test"
required-features = ["desktop"]
