[package]
name = "glitterbomb"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "A pure Rust confetti animation library for WebAssembly. No JS required."
repository = "https://github.com/junovhs/glitterbomb"
keywords = ["confetti", "wasm", "canvas", "animation", "dioxus", "glitter"]
categories = ["wasm", "web-programming", "graphics"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomRect",
    "MediaQueryList",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
