[package]
name = "glitterbomb"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A pure Rust confetti animation library. WASM + Desktop wgpu."
repository = "https://github.com/junovhs/glitterbomb"
keywords = ["confetti", "wasm", "canvas", "dioxus", "wgpu"]
categories = ["wasm", "web-programming", "graphics", "rendering"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
web = ["dep:wasm-bindgen", "dep:js-sys", "dep:gloo-timers", "dep:wasm-bindgen-futures", "dep:web-sys"]
desktop = ["dep:winit", "dep:wgpu", "dep:pollster", "dep:rand", "dep:bytemuck"]

[dependencies]
futures = "0.3"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "CssStyleDeclaration", "DomRect", "MediaQueryList"] }
winit = { version = "0.29", optional = true }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
bytemuck = { version = "1.14", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
